--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.2",
     "expo-app-loading": "^1.2.1",
