--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "^5.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.2",
     "expo-app-loading": "^1.2.1",
+    "expo-barcode-scanner": "~11.1.2",
+    "expo-camera": "~12.0.3",
     "expo-font": "^10.0.3",
     "expo-linear-gradient": "^10.0.3",
+    "expo-permissions": "~13.0.3",
     "expo-status-bar": "~1.1.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.1",
+    "react-native-radio-buttons": "^1.0.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
