--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@jsamr/counter-style": "^2.0.1",
+    "@jsamr/react-native-li": "^2.3.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.11",
