Change icons. Change uri based on environment variables

--- a/app.json
+++ b/app.json
@@ -1,7 +1,14 @@
 {
   "expo": {
-    "name": "uptrace-mobile",
+    "name": "UPTrace",
+    "description": "UPTrace is a contact tracing application for the University of the Philippines Diliman that uses QR codes. It aims to be easy to use, accurate, accessible and available to the majority, effective, and to address issues on security and privacy.",
     "slug": "uptrace-mobile",
+    "privacy": "public",
+    "sdkVersion": "43.0.0",
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,16 +24,18 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.upd.uptrace",
+      "buildNumber": "1.0.0",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.upd.uptrace",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      },
+      "permissions": ["CAMERA"]
     }
   }
 }
