--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-app-loading": "^1.2.1",
     "expo-barcode-scanner": "~11.1.2",
     "expo-camera": "~12.0.3",
+    "expo-constants": "^13.0.2",
     "expo-font": "^10.0.3",
     "expo-linear-gradient": "^10.0.3",
     "expo-permissions": "~13.0.3",
