--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@jsamr/counter-style": "^2.0.1",
     "@jsamr/react-native-li": "^2.3.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "^4.0.1",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.2.1",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.2",
     "expo-app-loading": "^1.2.1",
     "expo-barcode-scanner": "~11.1.2",
     "expo-camera": "~12.0.3",
-    "expo-constants": "^13.0.2",
+    "expo-constants": "~12.1.3",
     "expo-font": "^10.0.3",
     "expo-linear-gradient": "^10.0.3",
     "expo-permissions": "~13.0.3",
